fixed #3276 drop-down-buttons z-index lowered when closed

--- a/modules.less
+++ b/modules.less
@@ -787,6 +787,7 @@ ul.list-view{
 		padding-right: 15px;
 		box-sizing: border-box;
 		background: #fff;
+		position: relative;
 		> div > .cell{
 			white-space: nowrap;
 			overflow: hidden;
@@ -3377,6 +3378,7 @@ drop-down-button{
 }
 
 .drop-down-button.hidden{
+	z-index: 1;
 	label{
 		border-radius: 3px;
 		background: #ccc;
